# warmux

./: README.md
old/warmux-10.12/tools/list_games/: Makefile.am
old/wormux-0.7.3/: configure.ac
old/wormux-0.7.3/.svn/: entries
old/wormux-0.7.3/.svn/text-base/: BUGS.svn-base
old/wormux-0.7.3/data/: weapons.xml
old/wormux-0.7.3/data/.svn/: entries
old/wormux-0.7.3/data/game_mode/: objects.xml
old/wormux-0.7.3/doc/: INSTALL.fr.txt
old/wormux-0.7.3/doc/.svn/: entries
old/wormux-0.7.3/doc/license/: COPYING.pl.txt
old/wormux-0.7.3/m4/.svn/: entries
old/wormux-0.7.3/po/: ca.po  de.po  nl.po
old/wormux-0.7.3/po/.svn/: entries
old/wormux-0.7.3/src/: valgrind.sh
old/wormux-0.7.3/src/.svn/: entries
old/wormux-0.7.3/src/game/: game.h  game_loop.cpp
old/wormux-0.7.3/src/graphic/: sprite.cpp  spriteanimation.cpp  spritecache.h  surface.h
old/wormux-0.7.3/src/gui/: check_box.cpp  label.cpp  list_box.cpp  null_widget.h  progress_bar.h
old/wormux-0.7.3/src/include/: constant.cpp
old/wormux-0.7.3/src/interface/: game_msg.cpp  weapon_menu.cpp
old/wormux-0.7.3/src/map/: tileitem.cpp  wind.cpp
old/wormux-0.7.3/src/object/: object_cfg.cpp
old/wormux-0.7.3/src/team/: character.cpp  team.cpp  team_energy.cpp
old/wormux-0.7.3/src/tool/: math_tools.h  stats.cpp  vector2.h  xml_document.h
old/wormux-0.7.3/src/weapon/: auto_bazooka.cpp  bounce_ball.cpp  gnu.h  launcher.h  weapon.h
old/wormux-0.7.3/tools/.svn/: entries
old/wormux-0.7.3/tools/map-generator/: map.c
old/wormux-0.7.3/tools/static_release/: INSTALL
old/wormux-0.7.9/src/: CMakeLists.txt  Makefile.am  wormux.rc
old/wormux-0.7.9/src/.svn/: entries
old/wormux-0.7.9/src/ai/: ai_engine.cpp  ai_movement_module.cpp  ai_movement_module.h
old/wormux-0.7.9/src/character/: body_list.cpp  body_list.h  character.h  member.cpp  member.h  move.cpp
old/wormux-0.7.9/src/game/: game.cpp  game_loop.cpp  game_mode.cpp  time.h
old/wormux-0.7.9/src/graphic/: color.h  font.cpp  fps.h  sprite.h  surface.cpp  text.cpp  text.h  text_list.h  video.h
old/wormux-0.7.9/src/gui/: box.h  button.cpp  button_text.h  label.cpp  list_box.cpp  list_box_w_label.cpp  list_box_w_label.h  msg_box.h  null_widget.cpp  null_widget.h  picture_text_cbox.h  progress_bar.cpp  question.h  spin_button.cpp  spin_button_picture.cpp  spin_button_picture.h  text_box.cpp  widget_list.cpp
old/wormux-0.7.9/src/include/: action.cpp  action_handler.h  binreloc.h
old/wormux-0.7.9/src/interface/: interface.h  keyboard.cpp  weapon_menu.h
old/wormux-0.7.9/src/map/: camera.cpp  map.h  maps_list.cpp  sky.h  wind.cpp  wind.h
old/wormux-0.7.9/src/menu/: credits_menu.h  game_menu.cpp  internet_menu.cpp  main_menu.cpp  menu.cpp  menu.h  network_menu.h  network_teams_selection_box.cpp  results_menu.cpp  teams_selection_box.h
old/wormux-0.7.9/src/network/: chat.h  index_server.cpp  index_server.h  network.cpp  network.h
old/wormux-0.7.9/src/object/: barrel.cpp  barrel.h  objects_list.cpp  physical_obj.cpp  physical_obj.h  physics.h
old/wormux-0.7.9/src/particles/: body_member.cpp  bullet.cpp  bullet.h  dark_smoke.h  explosion_smoke.cpp  explosion_smoke.h  ill_bubble.h  particle.cpp  particle.h  smoke.h  star.h  teleport_member.cpp  (+1 more)
old/wormux-0.7beta3/po/: LINGUAS  Makefile.am  ca.po  eo.po  es.po  hu.po  it.po  nl.po  pt.po  ru.po  sk.po
old/wormux-0.8/: CMakeLists.txt  ChangeLog  Makefile.am  configure.ac
old/wormux-0.8.1/src/: CMakeLists.txt  Makefile.am
old/wormux-0.8/.svn/: dir-prop-base  entries
old/wormux-0.8/cmake/: InstallData.cmake
old/wormux-0.8/data/: authors.xml  graphism.xml
old/wormux-0.8/mac/: build_wormux_first.sh  build_wormux_macports.sh
old/wormux-0.8/po/: ca.po  de.po  eo.po  es.po  gl.po  he.po  it.po  lv.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  zh_CN.po
old/wormux-0.8/src/: Makefile.am  wormux.rc
old/wormux-0.8alpha1/: INSTALL  Makefile.am  README.cmake
old/wormux-0.8alpha1/.svn/: entries
old/wormux-0.8alpha1/cmake/: CPackConfig.cmake  InstallData.cmake
old/wormux-0.8alpha1/data/: authors.dtd  graphism.dtd  graphism.xml  weapons.xml
old/wormux-0.8alpha1/po/: CMakeLists.txt  de.po  fi.po  hu.po  nl.po  pt.po  ro.po  sk.po  tr.po
old/wormux-0.8alpha1/src/: CMakeLists.txt  Makefile.am  SourceFiles.cmake  main.cpp
old/wormux-0.8beta1/: CMakeLists.txt  ChangeLog  Makefile.am  README  clean.sh  configure.ac
old/wormux-0.8beta1/.svn/: entries
old/wormux-0.8beta1/cmake/: InstallData.cmake
old/wormux-0.8beta1/data/: authors.dtd
old/wormux-0.8beta1/po/: Makefile.am  ca.po  fr.po  hu.po  pl.po  pt-BR.po  ro.po  sl.po  sv.po
old/wormux-0.8beta1/src/: Makefile.am  main.cpp
old/wormux-0.8beta2/src/: CMakeLists.txt  Makefile.am  main.cpp
old/wormux-0.8beta3/: CMakeLists.txt  ChangeLog  configure.ac
old/wormux-0.8beta3/.svn/: dir-prop-base  entries
old/wormux-0.8beta3/cmake/: FindCURL.cmake  FindSDL_gfx.cmake
old/wormux-0.8beta3/data/: authors.dtd  graphism.xml  weapons.xml
old/wormux-0.8beta3/doc/: Makefile.am
old/wormux-0.8beta3/po/: bs.po  da.po  hu.po  lv.po  nb.po  nl.po  pl.po  pt_BR.po  sk.po  sl.po
old/wormux-0.8beta3/src/: main.cpp  wormux.rc
old/wormux-0.8beta3/visual/: wormux.vcproj
old/wormux-0.8beta4/: CMakeLists.txt  ChangeLog  INSTALL
old/wormux-0.8beta4/.svn/: dir-prop-base  entries
old/wormux-0.8beta4/cmake/: InstallData.cmake
old/wormux-0.8beta4/data/: authors.xml  graphism.xml  wormux.desktop  wormux_default_config.xml
old/wormux-0.8beta4/doc/: wormux.man
old/wormux-0.8beta4/po/: CMakeLists.txt  Makefile.am  bs.po  cpf.po  hu.po  nl.po  sl.po  sv.po  tr.po  zh_TW.po
old/wormux-0.8beta4/src/: Makefile.am
old/wormux-0.8beta4/visual/: wormux.vcproj
old/wormux-0.9.1/: Makefile.am
old/wormux-0.9.1/.svn/: entries
old/wormux-0.9.1/doc/: INSTALL.sk.txt
old/wormux-0.9.1/lib/: CMakeLists.txt
old/wormux-0.9.1/po/: bg.po  cpf.po  da.po  eo.po  es.po  et.po  fa.po  fi.po  hu.po  it.po  ja_JP.po  nb.po  nn.po  pl.po  ro.po  sl.po  sv.po  zh_CN.po  zh_TW.po
old/wormux-0.9.1/src/: doxygenconf
trunk/lib/warmux/: Makefile.am
(+14520 files in other folders)
